# chainbeasts

./: .gitignore  .gitmodules  CMakeLists.txt  LEGAL.md  Makefile  PRIVACY.md  README.md  TERMS.md  foundry.toml
benchmarks/: int8_kernel_bench.cpp
client/: index.html  package.json  tsconfig.json
client/mobile/: App.tsx  app.json  package.json
client/public/: plugins.json
client/src/: AnalyticsDashboard.tsx  App.tsx  BattleNotifications.tsx  BridgeView.tsx  CombatSimulatorView.tsx  CustomizationView.tsx  MarketplaceNotifications.tsx  MarketplaceView.tsx  MetricsChart.tsx  PluginMarketplaceView.tsx  PoUWChainView.tsx  TournamentManageView.tsx  TournamentResults.tsx  TrainerView.tsx  ValidatorView.tsx  bracket.ts  bridge.ts  curriculum.ts  hatch.js  marketplace.ts  plugin_marketplace.ts  pouw.ts  styles.css  tournament.ts  train.js  trainer.js  trainer.ts  traits.ts  wallet.js  wallet.ts
client/tests/: wallet.test.js
contracts/: Core.sol  CreatureNFT.sol  CreatureNFTBridge.sol  CurriculumDuel.sol  Energy.sol  FashionDuel.sol  Governance.sol  ICore.sol  IEnergy.sol  IGovernanceHook.sol  IProofVerifier.sol  IZkVerifier.sol  Marketplace.sol  MatchLedger.sol  Matchmaker.sol  ProofVerifier.sol  SeasonRegistry.sol  Tournament.sol  TrainingLedger.sol  ZkVerifier.sol
contracts/test/: Attachment.t.sol  Bridge.t.sol  BridgePoUW.t.sol  BridgeTournament.t.sol  Comprehensive.t.sol  Energy.t.sol  Governance.t.sol  Lease.t.sol  ProofVerifier.t.sol  Tournament.t.sol  TraitLock.t.sol
docs/: Architecture.md  BattleAnimation.md  BattlefieldDesign.md  BenchmarkResults.md  ContractDeployment.md  CrossChainBridging.md  CustomVisualization.md  DatasetCaching.md  GPUAcceleration.md  GameGuide.md  Governance.md  GraphDiffCLI.md  Hatching.md  IncrementalCache.md  Int8NetworkSpec.md  KernelNeuralSpec.md  LocalDevnet.md  Marketplace.md  MatchmakerContract.md  MobileClient.md  ModelSizeLimits.md  Philosophy.md  PluginMarketplace.md  PluginPackaging.md  PoUWConsensus.md  PreBattleCurriculum.md  ProofWorkflow.md  Testing.md  TrainingPipeline.md  WebAssembly.md  WebCombatSimulator.md
examples/: battle_samples.csv  checkpoint_demo.cpp  metrics_demo.cpp  onchain_arena_demo.cpp  plugin_demo.cpp
examples/web_simulator/: index.html  simulator.js
include/harmonics/: disk_cache_producer.hpp  kernel_cache.hpp
include/neuropet/: arena.hpp  battle.hpp  battle_animation.hpp  eth_encoding.hpp  hatching.hpp  http_client.hpp  int8_kernel.hpp  int8_spec.hpp  item.hpp  match_ledger.hpp  metrics.hpp  onchain_arena.hpp  onchain_curriculum.hpp  onchain_ledger.hpp  onchain_training.hpp  onchain_verifier.hpp  plugin_loader.hpp  pouw_chain.hpp  proof_aggregator.hpp  proof_system.hpp  simulation.hpp  training.hpp  traits.hpp  validator.hpp  zk_proof_system.hpp
scripts/: battle_server.js  build_wasm.sh  clear-cache.sh  init-cache.sh  marketplace_server.js  metrics_server.js  package_plugin.js  plugin_marketplace_server.js  run_benchmarks.sh  run_tests.sh  validator_server.js  web_simulator_server.js
scripts/devnet/: deploy.sh  start.sh
src/: stark_prover.cpp  zk_proof_system.cpp
tests/: attachment_test.cpp  battle_animation_test.cpp  battle_engine_test.cpp  bridge_encoding_test.cpp  cache_cli_test.cpp  cache_test.cpp  gpu_backend_test.cpp  graph_cache_cli_test.cpp  graph_cache_test.cpp  graph_diff_cli_test.cpp  hatching_test.cpp  inference_test.cpp  int8_determinism_test.cpp  int8spec_test.cpp  matchmaker_test.cpp  model_size_test.cpp  p2p_proof_test.cpp  pouw_chain_test.cpp  pouw_flow_test.cpp  pouw_fuzz_test.cpp  proof_system_test.cpp  quorum_test.cpp  sensor_test.cpp  stark_prover_test.cpp  trait_pack_test.cpp  validator_test.cpp  zk_proof_system_test.cpp
tools/: aggregator_server.cpp  bridge_cli.cpp  cache_cli.cpp  graph_cache_cli.cpp  graph_diff_cli.cpp  proof_cli.cpp  simulation_cli.cpp
whitepaper/: ChainBeastsWhitepaper.md
